style: fix changeset tag container - fix vertical alignment of right aligned tags
Tags and comment count were not aligned with the line text at all, and a solid
background were hiding the separator lines and made it look even more messy.

extra-container and comments-container are now simplified with top right
positioning and less margin tweaking.

Minimal changes to the tags - just touching some external sizing so it fits in
the container: line-height and margin.

--- a/kallithea/public/less/kallithea-tags.less
+++ b/kallithea/public/less/kallithea-tags.less
@@ -109,7 +109,6 @@ a.metatag[data-tag="license"]:hover {
   white-space: nowrap;
   border-radius: 4px;
   border: 1px solid #d9e8f8;
-  line-height: 1.5em;
 }
 table#changesets .phasetag,
 table#changesets .bumpedtag,
@@ -119,7 +118,6 @@ table#changesets .unstabletag,
 table#changesets .branchtag,
 table#changesets .tagtag,
 table#changesets .booktag {
-  margin: 1.1em 0;
   margin-right: 0.5em;
 }
 .phasetag,
